# drive_inverter_fw

./: .gitattributes  README.md
.github/workflows/: ci.yml
app/: .gitignore  Cargo.toml  README.md
app/src/: can.rs  comms_schema.rs  config.rs  gui.rs  main.rs  shared.rs
app/src/calib/: plan.md
app/src/panels/: control.rs  graph.rs  log.rs  mod.rs  settings.rs  telemetry.rs
autogen/: can_schema.yaml  generate.py
autogen/templates/: can_schema.h.jinja  comms_schema.rs.jinja
projects/common/: format.sh
projects/common/cmake/: arm-none-eabi.cmake  stm32_app.cmake
projects/motor_controller/: .gitignore  .project  CMakeLists.txt  CMakePresets.json  motor_controller.ioc
projects/motor_controller/Core/Inc/: bemf.h  calibration.h  comp.h  dac.h  fdcan.h  foc.h  hrtim.h  main.h  math_defs.h  motor_config.h  motor_interface.h  observer.h  opamp.h  retarget.h  smo.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  usart.h
projects/motor_controller/Core/Src/: adc.c  bemf.c  calibration.c  comp.c  dac.c  fdcan.c  foc.c  gpio.c  hrtim.c  main.c  motor_interface.c  observer.c  opamp.c  retarget.c  smo.c  stm32g4xx_it.c  syscalls.c  usart.c
projects/motor_controller/Core/Src/app/: app.c  app.h  math_defs.h
projects/motor_controller/Core/Src/app/bsp/: retarget.c  retarget.h
projects/motor_position_sensor/: .cproject  .mxproject  .project  CMakeLists.txt  CMakePresets.json  motor_position_sensor.ioc
projects/motor_position_sensor/Core/Src/: gpio.c  main.c  spi.c
projects/motor_position_sensor/Core/Src/app/: app.c  app.h
(+26 files in other folders)
