[package]
name = "drive_inverter_app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.25"
egui = "0.25"
egui_plot = "0.25"
flume = "0.11"
arc-swap = "1.5"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
socketcan = "3.5.0"

